styles.css
/* ----------- Generic Page Styling ------------- */

* {
  /* border: 1px red dashed; */
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #0b0c10;
  color: #fff8f0;
}

/* ----------- Header Starts------------- */

#header {
  width: 100%;
  height: 100vh;
  background-color: #0b0c10;
}

.container {
  padding: 10px 10%;
}

.main_nav {
  /* position: fixed; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.main_nav > ul > li {
  display: inline-block;
  list-style: none;
  margin: 10px 20px;
}

.main_nav > ul > li > a {
  text-decoration: none;
  color: #66fcf1;
  font-size: 18px;
  position: relative;
  /* font-weight: bold; */
}

.main_nav > ul > li > a::after {
  content: "";
  width: 0;
  height: 3px;
  background: #45a29e;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}

.main_nav > ul > li > a:hover:after {
  width: 100%;
}

#header_text {
  margin-top: 50px;
  font-size: 30px;
}

.grid_header > #header_text > h1 {
  color: #66fcf1;
}

.logo {
  width: 140px;
}

.grid_header {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.logo_home > img {
  width: 300px;
  border-radius: 15px;
}

.btn {
  display: block;
  margin: 20px;
  width: fit-content;
  padding: 14px 30px;
  text-decoration: none;
  /* font-weight: 300; */
  font-size: 14px;
  background-color: #45a29e;
  transition: background 0.5s;
  border-color: #45a29e;
}

.btn a {
  text-decoration: none;
  color: #fff;
  text-shadow: 2px;
  font-weight: 300;
  font-size: 14px;
}

.btn:hover {
  background: #66fcf1;
}

/* --------------------------------- About Section --------------------------------- */

#about {
  padding: 20px 0;
}

.about_col_header {
  padding: 20px 25px;
}

.sub_title {
  font-size: 60px;
  font-weight: 600;
  color: #66fcf1;
}

.about_col_header > .sub_title {
  color: #66fcf1;
}

.about_titles {
  display: flex;
  justify-content: space-between;
  font-size: 30px;
  color: #45a29e;
  margin-bottom: 20px;
}

.about_title_contents {
  margin-top: 20px;
  /* display: flex;
  justify-content: flex-start;
  flex-direction: column; */
}

.about_title_contents > ul > li {
  list-style: none;
  display: flex;
  /* flex-wrap: wrap; */
  padding: 10px 0;
}

.about_title_contents li span {
  display: inline-block;
  font-size: 16px;
  /* font-weight: bold; */
}

.about_title_contents li i {
  padding-left: 5px;
}
/* --------------------------------- Projects Section --------------------------------- */

#portfolio {
  padding: 50px 0;
}

.project_list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 30px;
  margin-top: 40px;
}

.projects {
  border-radius: 15px;
  position: relative;
  overflow: hidden;
}

.projects img {
  width: 100%;
  border-radius: 15px;
  display: block;
  transition: transform 0.5s;
}

.project_image {
  width: 100%;
  height: 0%;
  left: 0;
  bottom: 0;
  display: flex;
  background: linear-gradient(rgba(0, 0, 0, 0.6), #45a29e);
  position: absolute;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  overflow: hidden;
  text-align: center;
  font-size: 18px;
  border-radius: 15px;
  padding: 0;
  transition: height 0.5s;
}

.project_image h3 {
  font-weight: 600;
  margin-bottom: 10px;
}

.project_image a {
  margin-top: 20px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  text-align: center;
  color: #66fcf1;
  text-decoration: none;
  font-size: 18px;
  line-height: 55px;
  background: #0b0c10;
}
.project_image p {
  max-width: 80%;
  font-weight: 400;
}

.projects:hover img {
  transform: scale(1.1);
}

.projects:hover > .project_image {
  height: 100%;
}

/* --------------------------------- Contact Section --------------------------------- */

.contact_row {
  display: flex;
}

.column {
  flex: 50%;
}

.col_left {
  margin-top: 30px;
  line-height: 60px;
  font-size: 25px;
}

.col_right {
  font-size: 50px;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.col_right a {
  text-decoration: none;
  color: #66fcf1;
  transition: transform 0.5s;
}

.col_right a:hover {
  transform: translateY(-5px);
}

.goToTopBtn {
  /* display: none; */
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  border: none;
  outline: none;
  /* background-color: #0b0c10; */
  color: #66fcf1;
  cursor: pointer;
  /* padding: 15px; */
  border-radius: 10px;
  font-size: 45px;
  transition: transform 0.5s;
}

.goToTopBtn:hover {
  transform: translateY(-5px);
}

/* ---------------- Media Querys ------------------- */
@media only screen and (max-width: 992px) {
  #about {
    margin-top: 75px;
  }

  .project_image p {
    font-size: 15px;
  }
}

@media only screen and (max-width: 768px) {
  #about {
    margin-top: 100px;
  }

  .project_list {
    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
  }

  .project_image h3 {
    font-size: 12px;
  }

  .project_image p {
    font-size: 10px;
  }

  .project_image a {
    margin-top: 20px;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    text-align: center;
    color: #66fcf1;
    text-decoration: none;
    font-size: 12px;
    line-height: 27px;
    background: #0b0c10;
  }

  .col_left {
    font-size: 15px;
  }

  .col_right {
    font-size: 25px;
  }

  .goToTopBtn {
    font-size: 25px;
  }
}

@media only screen and (max-width: 600px) {
  #header_text {
    font-size: 1.5rem;
  }

  #about {
    padding-top: 25px;
  }

  .project_list {
    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
  }

  .project_image {
    font-size: 12px;
  }

  .project_image a {
    margin-top: 20px;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    text-align: center;
    color: #66fcf1;
    text-decoration: none;
    font-size: 12px;
    line-height: 27px;
    background: #0b0c10;
  }

  .col_left {
    font-size: 15px;
  }

  .col_right {
    font-size: 25px;
  }

  .goToTopBtn {
    font-size: 25px;
  }
}

@media only screen and (max-width: 475px) {
  #about {
    padding-top: 25px;
  }

  .about_titles {
    font-size: 25px;
  }

  .project_list {
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  }

  .project_image h3 {
    font-size: 25px;
  }

  .project_image a {
    margin-top: 20px;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    text-align: center;
    color: #66fcf1;
    text-decoration: none;
    font-size: 12px;
    line-height: 27px;
    background: #0b0c10;
  }

  .project_image p {
    font-size: 15px;
  }

  .contact_row {
    display: flex;
    flex-wrap: wrap;
    /* flex-direction: row; */
    justify-content: center;
  }

  .column {
    flex: 100%;
  }

  .col_left {
    margin-top: 13px;
    line-height: 30px;
    font-size: 14px;
  }

  .col_right {
    font-size: 18px;
    margin-top: 10px;
    /* display: flex;
    justify-content: space-around;
    align-items: center; */
  }

  .goToTopBtn {
    font-size: 25px;
  }
}

/* @media only screen and (max-width: 1200px) {
} */

